--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
+language: go
+
+go:
+  - 1.x
+
 deploy:
   provider: gae
   keyfile: client-secret.json
   project: shavenking-me
+
 before_install:
-- openssl aes-256-cbc -K $encrypted_0425487e53a3_key -iv $encrypted_0425487e53a3_iv
-  -in client-secret.json.enc -out client-secret.json -d
+  - openssl aes-256-cbc -K $encrypted_0425487e53a3_key -iv $encrypted_0425487e53a3_iv
+    -in client-secret.json.enc -out client-secret.json -d
